# ConsolidAR

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements.txt
adrs/: 0001-snowflake-only-architecture.md  0002-cta-current-rate-method.md  0003-pip-venv-vs-poetry.md  README.md
data_generation/: __init__.py  cli.py  coa_mapping.py  constants.py  corporate_coa.py  entities.py  fx_rates.py  intercompany.py  journal_entries.py  local_coa.py  output.py
docs/: data_model.md
