[tool.poetry]
name = "consolidar"
version = "0.1.0"
description = "Multi-entity financial consolidation platform on Snowflake. FX translation, intercompany eliminations, row-level security, and in-database LLM commentary for FP&A."
authors = ["Carlos Leguizamon Guillaumet <carlosleguizamonguillaumet1998@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/CarlosLeguiz/consolidar"
keywords = ["snowflake", "dbt", "fp&a", "consolidation", "data-engineering"]

[tool.poetry.dependencies]
python = "^3.11"
# Snowflake
snowflake-connector-python = "^3.12.0"
snowflake-snowpark-python = "^1.23.0"
# dbt
dbt-core = "^1.8.0"
dbt-snowflake = "^1.8.0"
# Data generation
pandas = "^2.2.0"
numpy = "^1.26.0"
faker = "^28.0.0"
requests = "^2.32.0"
python-dateutil = "^2.9.0"
pyarrow = "^17.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-cov = "^5.0.0"
ruff = "^0.6.0"
mypy = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=data_generation --cov=snowpark --cov-report=term-missing"
