[project]
name = "consolidar"
version = "0.1.0"
description = "Multi-entity financial consolidation platform on Snowflake. FX translation, intercompany eliminations, row-level security, and in-database LLM commentary for FP&A."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<4.0"
authors = [
    {name = "Carlos Leguizamon Guillaumet", email = "carlosleguizamonguillaumet1998@gmail.com"}
]
keywords = ["snowflake", "dbt", "fp&a", "consolidation", "data-engineering"]
dependencies = [
    "snowflake-connector-python (>=3.12.0,<4.0.0)",
    "snowflake-snowpark-python (>=1.23.0,<2.0.0)",
    "dbt-core (>=1.8.0,<2.0.0)",
    "dbt-snowflake (>=1.8.0,<2.0.0)",
    "pandas (>=2.2.0,<3.0.0)",
    "numpy (>=1.26.0,<2.0.0)",
    "faker (>=28.0.0,<29.0.0)",
    "requests (>=2.32.0,<3.0.0)",
    "python-dateutil (>=2.9.0,<3.0.0)",
    "pyarrow (>=17.0.0,<18.0.0)",
]

[project.optional-dependencies]
dev = [
    "pytest (>=8.3.0,<9.0.0)",
    "pytest-cov (>=5.0.0,<6.0.0)",
    "ruff (>=0.6.0,<1.0.0)",
    "mypy (>=1.11.0,<2.0.0)",
]

[project.urls]
Repository = "https://github.com/CarlosLeguiz/ConsolidAR"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=data_generation --cov=snowpark --cov-report=term-missing"
